# tunneled

./: .gitignore  CHANGELOG  CHANGELOG.md  Cargo.toml  PKGBUILD  README.md  TODO.md  config.example.yml  config.yml.example  services.yml.example
.github/workflows/: ci.yml  mean_bean_deploy.yml.bak
plugins/example_plugin/: Cargo.toml
plugins/example_plugin/src/: lib.rs
src/: auth_2.rs  client.rs  colors.rs  lib.rs  main.rs  server.rs  shared.rs  statics.rs
src/auth/: authenticator.rs  id.rs  mod.rs  secret.rs  strawberry_id.rs
src/cli/: args.rs  mod.rs  sections.rs
src/commands/: about.rs  auth.rs  client.rs  compose.rs  help.rs  local.rs  login.rs  mod.rs  plugin.rs  serial.rs  server.rs
src/core/: constants.rs  mod.rs  shared.rs
src/core/auth/: authenticator.rs  mod.rs  secret.rs  strawberry_id.rs
