[package]
name = "tunneled"
version = "2.4.3"
edition = "2021"
authors = ["Juliandev02"]
license = "GPL-3"
repository = "https://github.com/Strawberry-Foundations/tunneled"
keywords = ["network", "cli", "tunnel", "tcp"]
categories = ["network-programming", "web-programming", "command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
lazy_static = "1.5.0"
stblib = {version =  "0.7.0", features = ["plugin"]}
reqwest = "0.12.18"
dashmap = "7.0.0-rc2"
fastrand = "2.3.0"
futures-util = { version = "0.3.31", features = ["sink"] }
hex = "0.4.3"
hmac = "0.13.0-pre.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha2 = "0.11.0-pre.5"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "io-util", "macros", "net", "time"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
dirs = "6.0.0"
libloading = "0.8.8"
thiserror = "2.0.12"

[profile.release]
opt-level = 'z'
strip = true
lto = true