[package]
name = "tunneled"
version = "2.5.0"
edition = "2024"
authors = ["Juliandev02"]
license = "GPL-3"
repository = "https://github.com/Strawberry-Foundations/tunneled"
keywords = ["network", "cli", "tunnel", "tcp"]
categories = [
    "network-programming",
    "web-programming",
    "command-line-utilities",
]
readme = "README.md"

[[bin]]
name = "tunneled"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
lazy_static = "1.5.0"
libstrawberry = { version = "1.4.0", features = ["plugin"] }
reqwest = "0.12.23"
fastrand = "2.3.0"
futures-util = { version = "0.3.31", features = ["sink"] }
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = { git = "https://github.com/Strawberry-Foundations/serde-yaml" }
tokio = { version = "1.47.1", features = [
    "rt-multi-thread",
    "io-util",
    "macros",
    "net",
    "time",
] }
tokio-util = { version = "0.7.16", features = ["codec"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
dirs = "6.0.0"
libloading = "0.8.9"
thiserror = "2.0.17"

dashmap = "7.0.0-rc2"
sha2 = "0.11.0-rc.2"
hmac = "0.13.0-rc.2"

[profile.release]
opt-level = 'z'
strip = true
lto = true
