[package]
name = "tunneled"
version = "2.5.2"
edition = "2024"
authors = ["Juliandev02"]
license = "GPL-3"
repository = "https://github.com/Strawberry-Foundations/tunneled"
keywords = ["network", "cli", "tunnel", "tcp"]
categories = [
    "network-programming",
    "web-programming",
    "command-line-utilities",
]
readme = "README.md"

[[bin]]
name = "tunneled"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
lazy_static = "1.5.0"
libstrawberry = { version = "1.4.4", features = ["plugin"] }
reqwest = "0.13.2"
fastrand = "2.4.1"
futures-util = { version = "0.3.32", features = ["sink"] }
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = { git = "https://github.com/Strawberry-Foundations/serde-yaml" }
tokio = { version = "1.52.1", features = [
    "rt-multi-thread",
    "io-util",
    "macros",
    "net",
    "time",
] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
dirs = "6.0.0"
libloading = "0.9.0"
thiserror = "2.0.18"

dashmap = "6.1.0"
sha2 = "0.10.9" # Do not update to 0.11.0, it causes a compile error with hmac
hmac = "0.12.1" # Do not update to 0.13.0, it causes a compile error with sha2

[profile.release]
opt-level = 'z'
strip = true
lto = true
